--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=evn
+DB_DATABASE=hopeui
 DB_USERNAME=root
 DB_PASSWORD=root
 
