--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-APP_NAME="BADAN AMIL ZAKAT"
-APP_SUBNAME="Masjid Alhasanah"
+APP_NAME="WHATSAPP BLAST"
+APP_SUBNAME=""
 APP_INISIAL="BAZ ALHASANAH"
 APP_LOGO="images/icons/logo-tes.png"
 APP_ENV=local
@@ -15,9 +15,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hopeui
+DB_DATABASE=wa_blast
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
