--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@
 APP_NAME="WHATSAPP BLAST"
 APP_SUBNAME=""
 APP_INISIAL=""
+APP_SUBNAME="-"
+APP_INISIAL="WB"
 APP_LOGO="images/icons/logo-tes.png"
 APP_ENV=local
 APP_KEY=base64:TV+0mGhSZOba6eflcNuiGCA7xgYZd5nL9K+UEogHceA=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=https://wb.aalinurdin.my.id
 IS_DEMO=false
 
 LOG_CHANNEL=stack
@@ -15,9 +17,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=evn
-DB_USERNAME=root
-DB_PASSWORD=
+
+DB_DATABASE=u523286040_wb
+DB_USERNAME=u523286040_wb
+DB_PASSWORD=$$4Lhasanah$$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
