--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ APP_ENV=local
 APP_KEY=base64:TV+0mGhSZOba6eflcNuiGCA7xgYZd5nL9K+UEogHceA=
 APP_DEBUG=true
 APP_URL=https://wb.aalinurdin.my.id
-IS_DEMO=false
+IS_DEMO=true
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -18,9 +18,9 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
-DB_DATABASE=u523286040_wb
-DB_USERNAME=u523286040_wb
-DB_PASSWORD=$$4Lhasanah$$
+DB_DATABASE=trilebs_wb
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
