--- a/.env
+++ b/.env
@@ -18,9 +18,12 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
-DB_DATABASE=trilebs_wb
-DB_USERNAME=root
-DB_PASSWORD=root
+# DB_DATABASE=trilebs_wb
+# DB_USERNAME=root
+# DB_PASSWORD=root
+DB_DATABASE=u523286040_wb
+DB_USERNAME=u523286040_wb
+DB_PASSWORD=$$4Lhasanah$$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
